# mnemnk-app

./: .versionrc.cjs  CHANGELOG.md  README-ja.md  README.md  package-lock.json  package.json  tailwind.config.ts  update_version.py  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
src/: app.html
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/mnemnk/: agent.rs  autostart.rs  mod.rs  settings.rs  shortcut.rs  store.rs  tokenize.rs  tray.rs  window.rs
src-tauri/src/mnemnk-agent/: mnemnk-api.rs  mnemnk-application.rs
src-tauri/src/mnemnk/agent/: agent.rs  board.rs  builtin.rs  bultin.rs  command.rs  config.rs  context.rs  data.rs  definition.rs  env.rs  flow.rs  message.rs  mod.rs  output.rs
src-tauri/src/mnemnk/agent/builtins/: api.rs  board.rs  command.rs  core.rs  data.rs  database.rs  display.rs  file.rs  filter.rs  image.rs  input.rs  mod.rs  operator.rs  rhai_script.rs  rig.rs  stream.rs  string.rs  time.rs  utils.rs
src/components/: Attribution.svelte  Card.svelte  EventCalendar.svelte  HourlyEvents.svelte  Messages.svelte  NavBar.svelte  SearchBox.svelte  SearchResults.svelte
src/lib/: agent.ts  shared.svelte.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +layout.ts  +page.js  +page.svelte  +page.ts
src/routes/(home)/: +page.svelte
src/routes/agents/: +page.svelte  +page.ts  AgentDrawer.svelte  AgentList.svelte  AgentListItems.svelte  AgentMegaMenu.svelte  AgentNode.svelte  BoardNode.svelte  DatabaseNode.svelte  FlowDrawer.svelte  FlowList.svelte  FlowListItems.svelte  FlowMegaMenu.svelte  NodeBase.svelte  NodeContextMenu.svelte
src/routes/daily/: +page.svelte  +page.ts  EventsScrollbar.svelte  HourlyEvents.svelte
src/routes/daily/[date]/: +page.ts  HourlyEvents.svelte
src/routes/monitor/: +page.svelte  +page.ts  BoardNode.svelte  MessageNode.svelte
src/routes/search/: +page.svelte  +page.ts  SearchBox.svelte  SearchResults.svelte
src/routes/settings/: +page.svelte  +page.ts  Agent.svelte  Core.svelte  Database.svelte
