[package]
name = "mnemnk-app"
version = "0.5.2"
description = "Mnemnk App"
authors = ["stn"]
edition = "2021"
license = "../LICENSE"
default-run = "mnemnk-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mnemnk_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12.3"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "2.1.4", features = ["kv-rocksdb"] }
active-win-pos-rs = "0.8.3"
anyhow = "1.0.91"
axum = "0.8.1"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive"] }
confy = { version = "0.6.1", features = ["yaml_conf"], default-features = false }
ctrlc = "3.4.5"
env_logger = "0.11.6"
image = "0.25.5"
log = "0.4.22"
regex = "1.11.1"
tower-http = { version = "0.6.2", features = ["timeout"] }
xcap = "0.0.14"

[[bin]]
name = "mnemnk-app"
path = "src/main.rs"

[[bin]]
name = "mnemnk-api"
path = "src/mnemnk-agent/mnemnk-api.rs"

[[bin]]
name = "mnemnk-application"
path = "src/mnemnk-agent/mnemnk-application.rs"

[[bin]]
name = "mnemnk-screen"
path = "src/mnemnk-agent/mnemnk-screen.rs"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
