[package]
name = "mnemnk-app"
version = "0.10.1"
description = "Mnemnk App"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2021"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mnemnk_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12.3"

[dependencies]
anyhow = "1.0.91"
base64 = "0.22.1"
chrono = "0.4.38"
ctrlc = "3.4.5"
image = "0.25.5"
log = "0.4.25"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "2.1.4", features = ["kv-rocksdb"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
unicode-segmentation = "1.12.0"
unicode-script = "0.5.7"
unicode-normalization = "0.1.24"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
